# endless

./: .gitattributes  .gitignore  CLAUDE.md  DB_AUDIT.md  DONE.md  PLAN.md  README.md  TODO.md  gh.txt  go.mod  go.sum  justfile  pyproject.toml
.endless/: config.json  data.sql  verbs.json  verbs.jsonl  worktree.json
demo/: 01-problem.md  02-solution.md  03-what-it-is-not.md  04-details.md  05-web-dashboard.md  06-commands.md  07-task-switching.md  08-spawn.md  09-sqlite.db.md  10-channels.md  11-diving-in-to-code.md  25-takeaways.md  99-github-repo.md  out.html
docs/: DESIGN_SKETCH_745.md  PR_COMMENT_745_v2.md  TASK_RECORDING_PROMPT.md  analysis-2026-04-14-claude-tasks-vs-endless.md  brief-2026-04-02-endless-design.md  brief-2026-04-19-ai-tinkerers-lightning-talk-brief.md  design-2026-04-09-awareness-system.md  design-2026-04-09-execution-of-background-task-on-prompt-display.md  design-2026-04-09-hooking-codex-actions.md  design-2026-04-09-plan-management.md  design-2026-04-09-tmux-unique-ids-for-sessions,windows,panes.md  design-2026-04-12-plan-hierarchy-and-research-integrity.md  design-brief-2026-04-17-endless-channel-plugin.md  endless-discussion-summary-2026-04-15.md  feedback-2026-04-14-ai-tinkerers-presentational-proposal-feedback.md  future-ownership-filtering.md  future-project-attributes.md  future-sprawl-management.md  great-talk.html  guide-2026-04-15-using-endless-in-sessions.md  prompt-2026-04-15-archon-vs-h2pp-research.md  prompt-2026-04-17-go-mcp-channel-for-research.md  research-2026-04-14-archon-analysis.md  research-2026-04-14-beads-analysis.md  (+6 more)
(+840 files in other folders)
