[project]
name = "endless"
version = "0.1.0"
description = "Project awareness system for solo developers"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "inquirerpy>=0.3.4",
    "tabulate>=0.10.0",
]

[project.scripts]
endless = "endless.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/endless"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
